# advent-of-code-2025

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: aoc.hpp  main.cpp
src/days/day01/: solution.cpp  solution.md  test.toml
src/days/day02/: solution.cpp  test.toml
src/days/day03/: solution.cpp  test.toml
src/days/day04/: solution.cpp  test.toml
src/days/day05/: solution.cpp  test.toml
src/days/day06/: solution.cpp  test.toml
src/days/day07/: solution.cpp  test.toml
src/days/day08/: solution.cpp  test.toml
src/days/day09/: solution.cpp  test.toml
src/days/day10/: solution.cpp  test.toml
src/days/day11/: solution.cpp  test.toml
src/days/day12/: solution.cpp  test.toml
